# TaskSolver

./: ._agent.py  .gitignore  CLAUDE.md  README.md  agent.py  agy-capture.jsonl  claude_code.py  common.py  gpt4v.py  kimi.py  package.json  pyproject.toml  setup.py  vllm.py
.claude/workflows/: agy-mp-process-design.js
agyhook/: .gitignore  README.md  run-agy.sh  setup.sh
agyhook/config/: mcp.json
agyhook/native/: Makefile  agyhook.c  build.sh  gen_symbols_header.py  hooks.def  pybridge.c  pybridge.h
agyhook/python/: agy_mcp_server.py  agy_session.py  analyze_capture.py  example_agy_backend.py
agyhook/python/agy/: __init__.py  model.py  session.py
agyhook/python/agy_hooks/: __init__.py  h2reassemble.py
agyhook/symbols/: symbols.json
antigravity/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  run-agy.sh  setup.sh
antigravity/config/: README.md  agents.json  mcp.json
antigravity/native/: antigravity.c  hooks.def  pybridge.c
antigravity/pyagy/: __init__.py  _env.py  _pty.py  _term.py  agy_mcp_server.py  agyprocess.py  client.py  config.py  conversations.py  model.py  session.py
antigravity/pyagy/agy_process/: __init__.py  capture.py  hooks.py  http1sse.py  mp_child.py  record.py  rewrite.py  rpctrace.py  symbolize.py
antigravity/python/: agy_session.py  example_agy_backend.py
antigravity/python/agy/: model.py  session.py
antigravity/python/agy_hooks/: __init__.py
antigravity/python/agy_process/: __init__.py  record.py
antigravity/python/pyagy/: __init__.py  session.py
antigravity/src/: Makefile  antigravity.c  antigravity.cpp  build.sh  cgotrampoline.c  cgotrampoline.cpp  cgotrampoline.h  gen_symbols_header.py  gohook.c  gomod.c  gomod.cpp  gomod.h  hooks.def  proc.def  procdef.h  pybridge.c  pybridge.cpp  pybridge.h
antigravity/symbols/: agy_update.sh  build_symbols.py  gen_symbols_header.py  symbols.json
codex/: README.md
codex/pycodex/: __init__.py  _env.py  client.py  codexprocess.py  model.py
codex/pycodex/codex_process/: __init__.py  responses_decode.py
tasksolver/: agent.py  claude.py  claude_code.py  exceptions.py  gemini.py  kimi.py  vllm.py
tasksolver.egg-info/: SOURCES.txt
test_scripts/: _mcp_handler.py  agy_session.py  example_agy_backend.py  run-agy.sh  test_agy_session.py  test_agyprocess.py  test_appresponse.py  test_client.py  test_codex.py  test_config.py  test_http1sse.py  test_responses_decode.py  test_rewrite.py  test_rpctrace.py  test_symbolize.py  test_trampoline.py
wirecap/: __init__.py
wirecap/decode/: __init__.py  capture.py  h2reassemble.py  http1sse.py  mp_child.py  record.py  turns.py
wirecap/native/: CMakeLists.txt  pybridge.cpp  wirecap.h
wirecap/runtime/: __init__.py  process.py  workspace.py
