[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tasksolver"
version = "0.0.1"
description = "Provider-agnostic VLM query flow: an Agent that dispatches to OpenAI / Anthropic / Gemini / vLLM / Claude Code CLI / local HuggingFace model backends."
readme = "README.md"
requires-python = ">=3.10"
# Core deps are the ones imported unconditionally (Agent + common/event/keychain)
# plus the lightweight API SDKs the provider adapters use. Versions are left
# unpinned so the consuming environment (e.g. a pixi workspace) owns resolution.
dependencies = [
    "loguru",
    "pillow",
    "numpy",
    "requests",
    "tqdm",
    "shortuuid",
    "pymongo",            # provides the `bson` module (standalone `bson` breaks on Python 3.14)
    "openai",             # gpt4v + vLLM adapters
    "anthropic",          # claude + kimi adapters
    "google-generativeai" # gemini adapter
, "frida>=17.15.3,<18", "frida-tools>=14.10.4,<15"]

[project.optional-dependencies]
# These extras are plain PEP 621 metadata so the package stays installable as a
# dependency by uv and pixi. The torch wheel index, no-build-isolation, and the
# CUDA requirement are deliberately NOT encoded here — that config does not
# propagate to a consumer, so a consuming project must point at a torch index
# itself. TaskSolver's own pixi dev env wires all of that up under [tool.pixi.*].

# Local HuggingFace model adapters (qwen / intern / minicpm / phi / llama),
# imported lazily only when those model ids are selected. flash-attn is included
# here because the intern/phi/minicpm/llama adapters hardcode `flash_attention_2`
# (only qwen runs without it); it builds from source and needs CUDA — the pixi
# `local` feature below supplies the torch index, no-build-isolation, and toolchain.
local = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "timm",
    "bitsandbytes",
    "decord",
    "qwen-vl-utils",
    "einops",
    "flash-attn",
]

# Legacy BlenderAlchemy app / UI / plotting stack. Not imported by the tasksolver
# library itself; restored from the original setup.py install_requires.
app = [
    "streamlit",
    "flask",
    "flask-cors",
    "matplotlib",
]

# tasksolver lives at the repo root; the antigravity `pyagy` package — the backend
# plus the nested pyagy.agy_process shim-runtime and pyagy.agy_mcp_server — lives under
# antigravity/. List both roots so both ship in the (editable) package instead of
# relying on the PYTHONPATH activation. agy_process is a subpackage of pyagy (found
# automatically); the test/experiment scripts live in test_scripts/, not the package.
[tool.setuptools.packages.find]
where = [".", "antigravity"]
include = ["tasksolver*", "pyagy*"]

# --- pixi workspace + buildable package -----------------------------------
# Uses the `pixi-build` preview feature: rather than installing this project as
# an editable PyPI dependency, pixi builds it as a conda package via the
# pixi-build-python backend, and the workspace depends on it by path. The
# package's runtime deps are read from [project.dependencies] above. The heavy
# `local` extra stays out of the default environment (its ML stack may lag new
# Python releases); add a separate environment for it once those wheels
# support 3.13.
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [{ platform = "linux-64", cuda = "13.0" }]
preview = ["pixi-build"]

[tool.pixi.dependencies]
python = "3.13.*"
tasksolver = { path = "." }
nodejs = ">=25,<26"
bun = ">=1.3.11,<2"
# GNU make drives the antigravity shim build (antigravity/Makefile); this host has
# no system make, so pull it from conda-forge for manual rebuilds (`pixi run make …`).
# make is also required by node-gyp for the pymport source build.
make = ">=4"
pkg-config = "*"           # node-gyp uses pkg-config to find python3-embed (pymport)
# Linux UAPI headers (linux/, asm/): glibc's <limits.h> (pulled in via frida-gum.h)
# needs <linux/limits.h>, but this WSLackware host has none in /usr/include. The shim
# build points -idirafter at this package's sysroot in place — no copy — at
# $CONDA_PREFIX/x86_64-conda-linux-gnu/sysroot/usr/include.
kernel-headers_linux-64 = ">=4"
# antigravity HTTP/2 response decoding (h2reassemble.py) — from conda-forge, not pip.
hpack = ">=4"
brotli-python = ">=1.1"
gdb = ">=17.2,<18"
binutils = ">=2.45.1,<3"
gh = ">=2.96.0,<3"
glab = ">=1.106.0,<2"
paramiko = ">=5.0.0,<6"

# The antigravity shim build lives in antigravity/Makefile (setup.py's build_py hook
# runs `make -C antigravity` during the package build, so `pixi install` builds it).
# No pixi tasks needed: after an agy update, rebuild manually with
#   pixi run make -C antigravity symbols   # re-resolve symbols.json from the new agy
#   pixi run make -C antigravity           # recompile the shim
[tool.pixi.package]
name = "tasksolver"
version = "0.0.1"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

# The antigravity shim (antigravity/vendor/antigravity.so) is an x86-64 build and a
# main target of this repo, so produce an arch-specific (linux-64) package, not noarch.
[tool.pixi.package.build.config]
noarch = false

# The python backend builds without build isolation, so the [build-system]
# requirements must be present in the package's host environment — plus `make` and
# `kernel-headers_linux-64` (UAPI headers), which setup.py's build_py hook needs to
# build the antigravity shim. build_py compiles against $CONDA_PREFIX's sysroot, so
# the headers must live in *this* (host) env, not just the default one.
[tool.pixi.package.host-dependencies]
python = "3.13.*"
pip = "*"
setuptools = ">=61"
make = ">=4"
kernel-headers_linux-64 = ">=4"

# --- pymport (Node.js ↔ Python bridge, compiled from source) ----------------
# pymport embeds libpython as a shared library inside Node.js.  It must be
# compiled from source (--build-from-source) so node-gyp links against pixi's
# libpython3.13.  At runtime PYTHONHOME tells the embedded interpreter where
# to find the conda env's stdlib + site-packages (numpy, torch, …).
[tool.pixi.activation.env]
PYTHONHOME = "$CONDA_PREFIX"
PKG_CONFIG_PATH = "$CONDA_PREFIX/lib/pkgconfig"

[tool.pixi.tasks]
npm-install = "npm_config_build_from_source=true CXXFLAGS='-std=c++17' npm install"
pymport-test = { cmd = "node -e \"const {pymport,proxify}=require('pymport'); const sys=proxify(pymport('sys')); console.log('Python',sys.version.toString()); const np=proxify(pymport('numpy')); console.log('numpy',np.__version__.toString());\"", depends-on = ["npm-install"] }

# --- torch dev env (TaskSolver-local; consumers do NOT inherit any of this) ---
# The `local` and `app` features auto-map to the same-named
# [project.optional-dependencies] extras above, and are merged into the single
# default environment below. The PyTorch cu130 wheel index and the flash-attn
# build toolchain all live in the `local` feature; the CUDA 13 requirement is a
# virtual package on the workspace `platforms` above. Consumers never see any of it.
#
# flash-attn builds from source: no-build-isolation so it can import torch at build
# time; the cmake/ninja/gxx deps + CUDA_HOME/compiler env below complete the
# toolchain (system gcc 15 is too new for CUDA 13's nvcc).
[tool.pixi.feature.local.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]
index-strategy = "unsafe-best-match"
no-build-isolation = ["flash-attn"]

[tool.pixi.feature.local.dependencies]
cmake = ">=4"
ninja = "*"
gxx_linux-64 = ">=11,<13.3"

[tool.pixi.feature.local.activation.env]
CUDA_HOME = "/usr/local/cuda-13.0"
CC = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-gcc"
CXX = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-g++"
# flash-attn build tuning (its setup.py reads these exact names):
#  - FLASH_ATTN_CUDA_ARCHS: which SM archs to compile. "80" = Ampere (covers this
#    sm_86 RTX 3080) and avoids the default "80;90;100;120" fat binary (~4x work).
#    NOTE: flash-attn ignores TORCH_CUDA_ARCH_LIST entirely.
#  - MAX_JOBS: set explicitly so flash-attn skips its psutil auto-calc, which
#    under-counts jobs here because ZFS ARC deflates "available" memory. 8 jobs ×
#    ~3.7 GB (1 arch, NVCC_THREADS=1) ≈ 30 GB; ARC yields the rest.
#  - NVCC_THREADS: moot for a single arch (only parallelizes across archs).
FLASH_ATTN_CUDA_ARCHS = "80"
MAX_JOBS = "8"
NVCC_THREADS = "1"

# Two environments:
#   default — core + app (lightweight, no CUDA/torch dependency)
#   cuda    — core + local (torch cu130 + flash-attn) + app (UI)
# `pixi install` resolves the default env; use `pixi install -e cuda` (or
# `pixi run -e cuda …`) to get the full GPU stack. The CUDA 13 requirement
# (workspace platform virtual package) only matters for `cuda`. The PEP 621
# `local` / `app` extras stay separate, so consumers still install à la carte.
[tool.pixi.environments]
default = { features = ["app"], solve-group = "default" }
cuda = { features = ["local", "app"], solve-group = "default" }
