[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tasksolver"
version = "0.0.1"
description = "Provider-agnostic VLM query flow: an Agent that dispatches to OpenAI / Anthropic / Gemini / vLLM / Claude Code CLI / local HuggingFace model backends."
readme = "README.md"
requires-python = ">=3.10"
# Core deps are the ones imported unconditionally (Agent + common/event/keychain)
# plus the lightweight API SDKs the provider adapters use. Versions are left
# unpinned so the consuming environment (e.g. a pixi workspace) owns resolution.
dependencies = [
    "loguru",
    "pillow",
    "numpy",
    "requests",
    "tqdm",
    "shortuuid",
    "pymongo",            # provides the `bson` module (standalone `bson` breaks on Python 3.14)
    "openai",             # gpt4v + vLLM adapters
    "anthropic",          # claude + kimi adapters
    "google-generativeai" # gemini adapter
, "frida>=17.15.3,<18", "frida-tools>=14.10.4,<15"]

[project.optional-dependencies]
# These extras are plain PEP 621 metadata so the package stays installable as a
# dependency by uv and pixi. The torch wheel index, no-build-isolation, and the
# CUDA requirement are deliberately NOT encoded here — that config does not
# propagate to a consumer, so a consuming project must point at a torch index
# itself. TaskSolver's own pixi dev env wires all of that up under [tool.pixi.*].

# Local HuggingFace model adapters (qwen / intern / minicpm / phi / llama),
# imported lazily only when those model ids are selected. flash-attn is included
# here because the intern/phi/minicpm/llama adapters hardcode `flash_attention_2`
# (only qwen runs without it); it builds from source and needs CUDA — the pixi
# `local` feature below supplies the torch index, no-build-isolation, and toolchain.
local = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "accelerate",
    "timm",
    "bitsandbytes",
    "decord",
    "qwen-vl-utils",
    "einops",
    "flash-attn",
]

# Legacy BlenderAlchemy app / UI / plotting stack. Not imported by the tasksolver
# library itself; restored from the original setup.py install_requires.
app = [
    "streamlit",
    "flask",
    "flask-cors",
    "matplotlib",
]

# Package roots: tasksolver + the shared `wirecap` (capture/decode/native bridge, reused by
# both wrappers) at the repo root; the antigravity `pyagy` package under antigravity/; the
# codex `pycodex` package under codex/. List all three roots so they ship in the (editable)
# package instead of relying on the PYTHONPATH activation. The nested shim-runtime subpackages
# (pyagy.agy_process, pycodex.codex_process, wirecap.decode/runtime) are found automatically;
# the test/experiment scripts live in test_scripts/, not the package.
[tool.setuptools.packages.find]
where = [".", "antigravity", "codex"]
include = ["tasksolver*", "wirecap*", "pyagy*", "pycodex*"]

# --- pixi workspace + buildable package -----------------------------------
# Uses the `pixi-build` preview feature: rather than installing this project as
# an editable PyPI dependency, pixi builds it as a conda package via the
# pixi-build-python backend, and the workspace depends on it by path. The
# package's runtime deps are read from [project.dependencies] above. The heavy
# `local` extra stays out of the default environment (its ML stack may lag new
# Python releases); add a separate environment for it once those wheels
# support 3.13.
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [{ platform = "linux-64", cuda = "13.0" }]
preview = ["pixi-build"]

[tool.pixi.dependencies]
python = "3.13.*"
tasksolver = { path = "." }
nodejs = ">=25,<26"
# NOTE: bun was removed — it pins icu 75, which conflicts with boost 1.91 (icu 78, pulled in
# for Boost.Thread); nodejs (what pymport uses) is icu-78 and coexists fine. Re-add bun in a
# separate environment if needed so its icu pin doesn't clash with the default env's boost.
# GNU make for node-gyp: pymport is compiled from source by node-gyp, which needs make (this host
# has no system make). The antigravity shim now builds with cmake+ninja (below), not make.
make = ">=4"
pkg-config = "*"           # node-gyp uses pkg-config to find python3-embed (pymport)
# Linux UAPI headers (linux/, asm/): glibc's <limits.h> (pulled in via frida-gum.h)
# needs <linux/limits.h>, but this WSLackware host has none in /usr/include. The shim
# build points -idirafter at this package's sysroot in place — no copy — at
# $CONDA_PREFIX/x86_64-conda-linux-gnu/sysroot/usr/include.
kernel-headers_linux-64 = ">=4"
# Conda C/C++ compilers for the antigravity shim — the automatic build_py build AND manual
# `pixi run build-shim`. Use them instead of a bare PATH `gcc`/`g++`: on a Nix host those are
# Nix's, which bake /nix/store glibc rpaths into the shim and break its LD_PRELOAD. cmake picks
# them up via $CXX/$CC exported by the env. gxx pulls gcc; both pinned <13.3 to match the local
# feature (shared solve group). All shim TUs are C++23 (Boost.Thread/Boost.Python).
gcc_linux-64 = ">=11,<13.3"
gxx_linux-64 = ">=11,<13.3"
# Boost.Thread for the pybridge worker (its thread::attributes sets the libpython worker's
# 16 MB stack — no std API can). libboost-devel = headers + link libs; it pulls libboost (the
# runtime libboost_thread.so, found at runtime via the shim's -rpath $CONDA_PREFIX/lib).
libboost-devel = ">=1.88"
# Boost.Python for the pybridge CPython embedding (bp::object/import/extract over the raw
# C-API). Python-version-specific: the py313 build matches the embedded libpython3.13.
libboost-python-devel = ">=1.88"
# antigravity HTTP/2 response decoding (h2reassemble.py) — from conda-forge, not pip.
hpack = ">=4"
brotli-python = ">=1.1"
gdb = ">=17.2,<18"
binutils = ">=2.45.1,<3"
gh = ">=2.96.0,<3"
glab = ">=1.106.0,<2"
paramiko = ">=5.0.0,<6"
# cmake + ninja build the antigravity shim (antigravity/CMakeLists.txt) — both the automatic
# build_py hook (during `pixi install`) and the manual `pixi run build-shim`.
cmake = ">=4.3.4,<5"
ninja = ">=1.11"
patchelf = ">=0.17.2,<0.18"
py-lief = ">=0.17.6,<0.18"
rust = ">=1.96.1,<1.97"
clang = ">=22.1.8,<23"
libclang = ">=22.1.8,<23"
libcap = ">=2.78,<3"

# The antigravity shim build lives in antigravity/CMakeLists.txt (setup.py's build_py hook runs
# `cmake -S antigravity -B antigravity/build -G Ninja && cmake --build …` during the package build,
# so `pixi install` builds it). Manual rebuilds via the pixi tasks below:
#   pixi run build-shim         # configure (fetch deps) + compile the shim
#   pixi run shim-symbols       # after an agy update: re-resolve symbols.json + rebuild
#   pixi run shim-agy-update    # fetch the latest agy + print new pin values
[tool.pixi.package]
name = "tasksolver"
version = "0.0.1"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"

# The antigravity shim (antigravity/vendor/antigravity.so) is an x86-64 build and a
# main target of this repo, so produce an arch-specific (linux-64) package, not noarch.
[tool.pixi.package.build.config]
noarch = false

# The python backend builds without build isolation, so the [build-system] requirements must be
# present in the package's host environment — plus `cmake`/`ninja` and `kernel-headers_linux-64`
# (UAPI headers), which setup.py's build_py hook needs to build the antigravity shim. build_py
# compiles against $CONDA_PREFIX's sysroot, so the headers must live in *this* (host) env, not
# just the default one.
[tool.pixi.package.host-dependencies]
python = "3.13.*"
pip = "*"
setuptools = ">=61"
cmake = ">=4.3.4,<5"          # drives the shim build (antigravity/CMakeLists.txt) in build_py
ninja = ">=1.11"             # cmake generator for the shim build
kernel-headers_linux-64 = ">=4"
gcc_linux-64 = ">=11,<13.3"   # pulled by gxx; conda toolchain, not the Nix gcc on PATH
gxx_linux-64 = ">=11,<13.3"   # all shim TUs are C++23 (Boost.Thread/Boost.Python) → conda g++
libboost-devel = ">=1.88"     # Boost.Thread (headers + libboost_thread) for the pybridge worker
libboost-python-devel = ">=1.88"   # Boost.Python (embedding) — py313 build matches libpython3.13
# codex build (build_py also compiles the vendored codex CLI, gnu-dynamic, linking the shared
# wirecap bridge + libpython): the Rust toolchain + aws-lc-rs/rustls' bindgen (clang/libclang) +
# openssl-sys + the linux-sandbox crate (libcap). Skippable via CODEX_SKIP_BUILD.
rust = ">=1.96.1,<1.97"
clang = ">=22.1.8,<23"
libclang = ">=22.1.8,<23"
openssl = "*"
libcap = ">=2.78,<3"

# --- pymport (Node.js ↔ Python bridge, compiled from source) ----------------
# pymport embeds libpython as a shared library inside Node.js.  It must be
# compiled from source (--build-from-source) so node-gyp links against pixi's
# libpython3.13.  At runtime PYTHONHOME tells the embedded interpreter where
# to find the conda env's stdlib + site-packages (numpy, torch, …).
[tool.pixi.activation.env]
PYTHONHOME = "$CONDA_PREFIX"
PKG_CONFIG_PATH = "$CONDA_PREFIX/lib/pkgconfig"

[tool.pixi.tasks]
npm-install = "npm_config_build_from_source=true CXXFLAGS='-std=c++17' npm install"
pymport-test = { cmd = "node -e \"const {pymport,proxify}=require('pymport'); const sys=proxify(pymport('sys')); console.log('Python',sys.version.toString()); const np=proxify(pymport('numpy')); console.log('numpy',np.__version__.toString());\"", depends-on = ["npm-install"] }

# antigravity shim (antigravity/CMakeLists.txt). Configure is idempotent (fetches vendored deps on
# first run), so each task re-runs it before building the relevant target.
build-shim = "cmake -S antigravity -B antigravity/build -G Ninja && cmake --build antigravity/build"
shim-symbols = "cmake -S antigravity -B antigravity/build -G Ninja && cmake --build antigravity/build --target symbols && cmake --build antigravity/build"
shim-agy-update = "cmake -S antigravity -B antigravity/build -G Ninja && cmake --build antigravity/build --target agy-update"

# codex: build the (patched, from-source) codex CLI as a glibc-dynamic ELF (the DEFAULT host
# target — NOT the static-musl release target, which can't embed the pixi libpython). LIBCLANG_PATH
# lets aws-lc-rs/rustls' bindgen find libclang. Output at codex/vendor/codex-rs/target/release/codex.
build-codex = "bash -lc 'export LIBCLANG_PATH=\"$CONDA_PREFIX/lib\"; cd codex/vendor/codex-rs && cargo build --release -p codex-cli'"

# --- torch dev env (TaskSolver-local; consumers do NOT inherit any of this) ---
# The `local` and `app` features auto-map to the same-named
# [project.optional-dependencies] extras above, and are merged into the single
# default environment below. The PyTorch cu130 wheel index and the flash-attn
# build toolchain all live in the `local` feature; the CUDA 13 requirement is a
# virtual package on the workspace `platforms` above. Consumers never see any of it.
#
# flash-attn builds from source: no-build-isolation so it can import torch at build
# time; the cmake/ninja/gxx deps + CUDA_HOME/compiler env below complete the
# toolchain (system gcc 15 is too new for CUDA 13's nvcc).
[tool.pixi.feature.local.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu130"]
index-strategy = "unsafe-best-match"
no-build-isolation = ["flash-attn"]

[tool.pixi.feature.local.dependencies]
cmake = ">=4"
ninja = "*"
gxx_linux-64 = ">=11,<13.3"

[tool.pixi.feature.local.activation.env]
CUDA_HOME = "/usr/local/cuda-13.0"
CC = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-gcc"
CXX = "$CONDA_PREFIX/bin/x86_64-conda-linux-gnu-g++"
# flash-attn build tuning (its setup.py reads these exact names):
#  - FLASH_ATTN_CUDA_ARCHS: which SM archs to compile. "80" = Ampere (covers this
#    sm_86 RTX 3080) and avoids the default "80;90;100;120" fat binary (~4x work).
#    NOTE: flash-attn ignores TORCH_CUDA_ARCH_LIST entirely.
#  - MAX_JOBS: set explicitly so flash-attn skips its psutil auto-calc, which
#    under-counts jobs here because ZFS ARC deflates "available" memory. 8 jobs ×
#    ~3.7 GB (1 arch, NVCC_THREADS=1) ≈ 30 GB; ARC yields the rest.
#  - NVCC_THREADS: moot for a single arch (only parallelizes across archs).
FLASH_ATTN_CUDA_ARCHS = "80"
MAX_JOBS = "8"
NVCC_THREADS = "1"

# Two environments:
#   default — core + app (lightweight, no CUDA/torch dependency)
#   cuda    — core + local (torch cu130 + flash-attn) + app (UI)
# `pixi install` resolves the default env; use `pixi install -e cuda` (or
# `pixi run -e cuda …`) to get the full GPU stack. The CUDA 13 requirement
# (workspace platform virtual package) only matters for `cuda`. The PEP 621
# `local` / `app` extras stay separate, so consumers still install à la carte.
[tool.pixi.environments]
default = { features = ["app"], solve-group = "default" }
cuda = { features = ["local", "app"], solve-group = "default" }
